# PolarCodesDNN

./: .gitmodules  CMakeLists.txt  Experiments.ipynb  README.md  fermerge_large.txt  fermerge_small.txt
include/: aff3ct_init.hpp  gen_fb_list.hpp
include/Factory/: Gad.hpp
src/: aff3ct_init.cpp  gen_fb_list.cpp  main.cpp
src/Factory/: Gad.cpp
